example_glarea.cc: Fix Build on Visual Studio 2013

Apparently there is another quirk in Visual Studio 2013's C++
support, so one must use std::vector to declare the class member, and
then use a member initializer list to initialize it properly by the
constructor, if not doing it one-by-one in the constructor itself.

https://bugzilla.gnome.org/show_bug.cgi?id=754863